cmd/server: add (mocked) create customer route
